--- a/ZakSim/src/main/webapp/WEB-INF/views/zaksim/css/customerCenter/qna_view.css
+++ b/ZakSim/src/main/webapp/WEB-INF/views/zaksim/css/customerCenter/qna_view.css
@@ -6419,3 +6419,8 @@ td#qnaCommentTd {
   background-color: #de5457;
   color: white;
 }
+
+.mouseOver:hover {
+	cursor:pointer;
+	text-decoration: underline;
+}
